[gd_scene load_steps=3 format=3 uid="uid://cdqe06lagi45a"]

[ext_resource type="Script" path="res://src/weapons/Missile/MissileCannon.gd" id="1_oi3nu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6tu43"]

[node name="MissileCannon" type="Node2D"]
script = ExtResource("1_oi3nu")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="DetectionZone" type="CollisionShape2D" parent="Detector"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_6tu43")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
